--- a/serconf-development.properties
+++ b/serconf-development.properties
@@ -1,3 +1,3 @@
-postgrescnsecurity: Server=serverlinuxbsoftica.postgres.database.azure.com;Database=dbsecurity;Port=5432;User Id=ivan@serverlinuxbsoftica;Password=ICAn#2020#123z;Ssl Mode=Require;
-postgrescncore: Server=serverlinuxbsoftica.postgres.database.azure.com;Database=dbinvoices;Port=5432;User Id=ivan@serverlinuxbsoftica;Password=ICAn#2020#123z;Ssl Mode=Require;Search Path=esc_invoices;
+postgrescnsecurity: Server=serverbertol.postgres.database.azure.com;Database=dbsecurity;Port=5432;User Id=bertol@serverbertol;Password=Agosto26;Ssl Mode=Require;Search Path=public;
+postgrescncore: Server=serverbertol.postgres.database.azure.com;Database=Core;Port=5432;User Id=bertol@serverbertol;Password=Agosto26;Ssl Mode=Require;Search Path=esc_invoices;
 enviroment: DEVELOPMENT
