--- a/serconf.properties
+++ b/serconf.properties
@@ -1,3 +1,3 @@
-postgrescnsecurity: Server=serverpostgresmicroservicios.postgres.database.azure.com;Database=dbsecurity;Port=5432;User Id=ivan@serverpostgresmicroservicios;Password=MICRo#2020;Ssl Mode=Require;
-postgrescncore: Server=serverpostgresmicroservicios.postgres.database.azure.com;Database=bdcore;Port=5432;User Id=ivan@serverpostgresmicroservicios;Password=MICRo#2020;Ssl Mode=Require;Search Path=esc_invoices;
+postgrescnsecurity: Server=serverbertol.postgres.database.azure.com;Database=dbsecurity;Port=5432;User Id=bertol@serverbertol;Password=Agosto26;Ssl Mode=Require;Search Path=public;
+postgrescncore: Server=serverbertol.postgres.database.azure.com;Database=Core;Port=5432;User Id=bertol@serverbertol;Password=Agosto26;Ssl Mode=Require;Search Path=esc_invoices;
 enviroment: PRODUCTION
