--- a/serconf.properties
+++ b/serconf.properties
@@ -1,3 +1,3 @@
-postgrescnsecurity: Server=serverbertol.postgres.database.azure.com;Database=dbsecurity;Port=5432;User Id=bertol@serverbertol;Password=Agosto26;Ssl Mode=Require;Search Path=public;
-postgrescncore: Server=serverbertol.postgres.database.azure.com;Database=Core;Port=5432;User Id=bertol@serverbertol;Password=Agosto26;Ssl Mode=Require;Search Path=esc_invoices;
+postgrescnsecurity: Server=serverpostgres.postgres.database.azure.com;Database=dbsecurity;Port=5432;User Id=bertol@serverpostgres;Password=Agosto26;Ssl Mode=Require;Search Path=public;
+postgrescncore: Server=serverpostgres.postgres.database.azure.com;Database=Core;Port=5432;User Id=bertol@serverpostgres;Password=Agosto26;Ssl Mode=Require;Search Path=esc_invoices;
 enviroment: PRODUCTION
